# vectorial-recomendation-system

./: .dockerignore  .gitignore  Cargo.toml  DEPLOYMENT.md  DEVELOPMENT.md  Dockerfile  LICENSE  README.md  docker-compose.yml  package.json  test_performance.sh
benches/: recommendation_bench.rs
data/: harvester.db  import_neo4j.cypher
docs/: API_ENDPOINTS.md  DOCKER.md  PERFORMANCE.md  PERFORMANCE_DOCKER.md  PHASE2_COMPLETE.md  PHASE3_COMPLETE.md  PHASE4_COMPLETE.md  SECURITY-AUDIT.md
docs/plans/: 2026-03-23-harvester-design.md  2026-03-23-phase2-design.md  2026-03-24-frontend-architecture-design.md  2026-03-24-frontend-implementation-plan.md  2026-03-24-phase5-comprehensive.md
services/nestjs-bridge/: .env.example  Dockerfile  package.json  performance-benchmark.js  tsconfig.json
services/nestjs-bridge/src/: app.module.ts  main.ts
services/nestjs-bridge/test/: auth.integration.spec.ts
services/sveltekit-frontend/: Dockerfile  package.json  tsconfig.json  vite.config.ts
services/sveltekit-frontend/e2e/: auth-flow.spec.ts
services/sveltekit-frontend/src/: app.css  app.html
src/: lib.rs  main.rs
src/api/: errors.rs  mod.rs  state.rs
src/api/auth/: jwt.rs  mod.rs  types.rs
src/api/cache/: mod.rs
src/api/handlers/: admin.rs  auth.rs  explain.rs  mod.rs  recommendations.rs  search.rs
src/ml/: mod.rs  random_walk.rs  skip_gram.rs  vector_index.rs
src/normalizer/: canonical.rs  cleaners.rs  mod.rs  normalizer.rs
src/recommendation/: filters.rs  layers.rs  mod.rs  scoring.rs
src/resolver/: fuzzy.rs  id_registry.rs  mod.rs
src/scanner/: mod.rs
src/schema/: entity_type.rs  inferrer.rs  mod.rs  synonyms.rs
src/storage/: graph.rs  mod.rs  sqlite.rs
src/triplets/: mod.rs  relation_type.rs
src/web/: mod.rs
tests/: api_neo4j_test.rs  integration_phase2_test.rs  integration_test.rs  ml_random_walk_test.rs  ml_skip_gram_test.rs  ml_vector_index_test.rs  normalizer_test.rs  recommendation_layers_test.rs  resolver_test.rs  scanner_test.rs  schema_test.rs  triplets_test.rs
(+39 files in other folders)
