[package]
name = "anime-harvester"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "anime-harvester"
path = "src/main.rs"

[lib]
name = "anime_harvester"
path = "src/lib.rs"

[dependencies]
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.4"
strsim = "0.11"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
clap = { version = "4.4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"
bincode = "1.3"

[dev-dependencies]
tempfile = "3.8"
